fix(ui): added dark mode (#25)
Reviewed-on: https://git.janis-eccarius.de/KnockOutWhist/KnockOutWhist-Web/pulls/25
Co-committed-by: Janis <janis.e.20@gmx.de>

--- a/knockoutwhistweb/app/assets/stylesheets/main.less
+++ b/knockoutwhistweb/app/assets/stylesheets/main.less
@@ -98,7 +98,7 @@ html, body {
     height: 100%;
 }
 #rules {
-    color: white;
+    color: @color;
     font-size: 1.5em;
     font-family: Arial, serif;
 }
